# szpack_wrapper

./: .gitignore  404.html  MANIFEST.in  README.rst  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
_modules/: index.html
_modules/szpack_wrapper/: sz.html
_sources/api/: szpack_wrapper.SZ.rst.txt
_static/: documentation_options.js
api/: szpack_wrapper.SZ.html
docs/: conf.py  index.rst
licenses/: LICENSE.rst
szpack_wrapper/: __init__.py  sz.py
szpack_wrapper/tests/: test_extern_szpack.py
