[metadata]
name = szpack_wrapper
author = Zhiyuan Ma
author_email = zhiyuanma@umass.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://to.be.set
description = A high-level wrapper for SZpack.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = toltec-astro/szpack_wrapper

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy

[options.entry_points]

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
szpack_wrapper = data/*

[tool:pytest]
testpaths = "szpack_wrapper" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    szpack_wrapper/_astropy_init*
    szpack_wrapper/conftest.py
    szpack_wrapper/*setup_package*
    szpack_wrapper/tests/*
    szpack_wrapper/*/tests/*
    szpack_wrapper/extern/*
    szpack_wrapper/version*
    */szpack_wrapper/_astropy_init*
    */szpack_wrapper/conftest.py
    */szpack_wrapper/*setup_package*
    */szpack_wrapper/tests/*
    */szpack_wrapper/*/tests/*
    */szpack_wrapper/extern/*
    */szpack_wrapper/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
